test/files/neg/t3194.scala

trait T {
  def zero(): Unit = Nil.z = 0
}
